Fix hover in megamenu and fix z-index filter block

--- a/src/scss/blocks/_catalog-filter.scss
+++ b/src/scss/blocks/_catalog-filter.scss
@@ -1,5 +1,7 @@
 .catalog-filter {
     margin-bottom: 3rem;
+    position: relative;
+    z-index: 2;
 
     @media (max-width: 575px) {
         margin-bottom: 2.3rem;
