--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -333,11 +333,6 @@
 
         &-link {
             padding: 0 1rem;
-
-            &:hover {
-                background: $color_gray !important;
-                color: $color_white;
-            }
         }
     }
 
